# mcp-crypto-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  mcpo_config.json  pyproject.toml  requirements.txt
app/: futures_usdtm_1h_refresh_15m_alert.py  main.py
app/config/: settings.py
app/models/: analysis.py  market_data.py
app/prompts/: analysis_prompts.py
app/resources/: market_info_resources.py
app/services/: akshare_service.py  crypto_service.py  etf_service.py  exchange_service.py  yfinance_service.py
app/tools/: ak_stock_tools.py  crypto_tools.py  etf_tools.py  indicator_calculator.py  market_analysis.py  price_data.py  report_generator.py  us_stock_tools.py
app/utils/: recommend_stocks.py  stock_analysis_scheduler.py
config/: logging_config.py  settings.py
crypto_scanner/: candidates.py  config.py  detect.py  detect_pro.py  exchange.py  formatter.py  liquidity.py  loggingx.py  loop.py  notifier.py  ta_utils.py
crypto_scanner/strategies/: __init__.py  h1_with_4h.py  m15.py
prompts/: analysis_prompts.py
resources/: market_data.py
services/: database_service.py  exchange_service.py
test/: openai.json  test_call_mcp_loop.py  test_server.py
tools/: llm_analysis.py  market_analysis.py
