[project]
name = "mcp-crypto-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.16.95",
    "ccxt>=4.4.86",
    "fastmcp>=2.5.1",
    "langchain>=0.3.25",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ta-lib>=0.6.3",
    "yfinance>=0.2.63",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
