[project]
name = "mcp-crypto-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns==3.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.12",
    "aiosignal==1.3.2",
    "akracer==0.0.13",
    "akshare==1.16.98",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "authlib==1.6.0",
    "beautifulsoup4==4.13.4",
    "ccxt==4.4.88",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "contourpy==1.3.2",
    "cryptography==45.0.4",
    "curl-cffi==0.11.3",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.0",
    "fastmcp==2.8.0",
    "fonttools==4.58.2",
    "frozendict==2.4.6",
    "frozenlist==1.7.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "jsonpatch==1.33",
    "jsonpath==0.82.2",
    "jsonpointer==3.0.0",
    "kiwisolver==1.4.8",
    "langchain==0.3.25",
    "langchain-core==0.3.65",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.45",
    "lxml==5.4.0",
    "markdown-it-py==3.0.0",
    "matplotlib==3.10.3",
    "mcp==1.9.4",
    "mdurl==0.1.2",
    "multidict==6.4.4",
    "multitasking==0.0.11",
    "nest-asyncio==1.6.0",
    "numpy==2.3.0",
    "openai>=1.107.3",
    "openapi-pydantic==0.5.1",
    "openpyxl==3.1.5",
    "orjson==3.10.18",
    "packaging==24.2",
    "pandas==2.3.0",
    "peewee==3.18.1",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "py-mini-racer==0.6.0",
    "pycares==4.8.0",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "schedule==1.2.2",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "sse-starlette==2.3.6",
    "starlette==0.47.0",
    "ta-lib==0.6.4",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.3",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "xlrd==2.0.1",
    "yarl==1.20.1",
    "yfinance==0.2.63",
    "zstandard==0.23.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
